@@ -18,11 +18,13 @@
 
 package plugily.projects.villagedefense.kits;
 
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.List;
+import java.util.logging.Level;
 import org.bukkit.configuration.file.FileConfiguration;
-import org.bukkit.inventory.ItemStack;
-import pl.plajerlair.commonsbox.minecraft.configuration.ConfigUtils;
+import plugily.projects.commonsbox.minecraft.configuration.ConfigUtils;
 import plugily.projects.villagedefense.Main;
-import plugily.projects.villagedefense.kits.basekits.FreeKit;
 import plugily.projects.villagedefense.kits.basekits.Kit;
 import plugily.projects.villagedefense.kits.free.KnightKit;
 import plugily.projects.villagedefense.kits.free.LightTankKit;
@@ -49,11 +51,6 @@ import plugily.projects.villagedefense.kits.premium.TeleporterKit;
 import plugily.projects.villagedefense.kits.premium.TornadoKit;
 import plugily.projects.villagedefense.kits.premium.WizardKit;
 import plugily.projects.villagedefense.utils.constants.Constants;
-
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
-import java.util.logging.Level;
 
 /**
  * Kit registry class for registering new kits.
@@ -100,7 +97,7 @@ public class KitRegistry {
    *
    * @param defaultKit default kit to set, must be FreeKit
    */
-  public static void setDefaultKit(FreeKit defaultKit) {
+  public static void setDefaultKit(Kit defaultKit) {
     KitRegistry.defaultKit = defaultKit;
   }
 
@@ -113,36 +110,19 @@ public class KitRegistry {
     return kits;
   }
 
-  /**
-   * Get registered kit by it's represented item stack
-   *
-   * @param itemStack itemstack that kit represents
-   * @return Registered kit or default if not found
-   */
-  public static Kit getKit(ItemStack itemStack) {
-    for(Kit kit : kits) {
-      if(itemStack.getType() == kit.getMaterial()) {
-        return kit;
-      }
-    }
-
-    return getDefaultKit();
-  }
-
   private static void setupGameKits() {
     KnightKit knightkit = new KnightKit();
     FileConfiguration config = ConfigUtils.getConfig(plugin, Constants.Files.KITS.getName());
     for(Class<?> kitClass : classKitNames) {
       if(config.getBoolean("Enabled-Game-Kits." + kitClass.getSimpleName().replace("Kit", ""))) {
         try {
-          Class.forName(kitClass.getName()).newInstance();
-        } catch(ClassNotFoundException | IllegalAccessException | InstantiationException e) {
+          Class.forName(kitClass.getName()).getDeclaredConstructor().newInstance();
+        } catch(Exception e) {
           plugin.getLogger().log(Level.SEVERE, "Fatal error while registering existing game kit! Report this error to the developer!");
           plugin.getLogger().log(Level.SEVERE, "Cause: " + e.getMessage() + " (kitClass " + kitClass.getName() + ")");
         }
       }
     }
-
     setDefaultKit(knightkit);
   }
 
